package com.ufersa.backend_impressoes.model.enuns;

public enum CategoriaServico {
    IMPRESSAO,
    ENCADERNACAO
}