package com.ufersa.backend_impressoes.model.enuns;

public enum StatusPedido {
    PENDENTE,
    PRONTO,
    CONCLUIDO,
    CANCELADO
}