package com.ufersa.backend_impressoes.model.enuns;

public enum TipoPagamento {
    PIX,
    DINHEIRO,
    CARTAO
}
