@startuml diagram

hide circle
skinparam linetype ortho
skinparam shadowing false


skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor White
    ArrowColor #0e02fa
    BorderColor #000000
    AttributeFontColor #000000
    MethodFontColor #0b3203
}

enum CategoriaServico {
  IMPRESSAO
  ENCADERNACAO
}

enum StatusPedido {
  PENDENTE
  PRONTO
  CONCLUIDO
  CANCELADO
}

enum Orientacao {
  RETRATO
  PAISAGEM
}

enum TipoCor {
  PRETO_BRANCO
  COLORIDO
}

enum TipoPagamento {
  PIX
  DINHEIRO
  CARTAO
}

class "Usuario" as usuario {
  - id_usuario : int
  - nome_completo : String
  - email : String
  - senha : String
  - preferencias_notificacao : boolean[cite: 11]
  ==
  + autenticarUsuario() 
  + visualizarPerfil() 
  + atualizarPerfil() 
  + recuperarSenha() 
  + alterarSenha() 
  + cadastrarUsuario() 
}

class "Estudante" as estudante {
  --
  - matricula : String
  - curso : String
  ==
}

class "Administrador" as admin {
  --
  ==
  + cadastrarAdministradorInterno() 
  + gerenciarUsuarios() 
  + listarFilaGlobalAdmin() 
  + buscarFilaAdminFiltrada(termo, status)
  + chamarProximoPedido() 
  + concluirImpressao(idPedido: int) 
  + atualizarStatusPedido(idPedido, status)
  + obterDetalhesPedido(idPedido: int) 
  + obterNivelOcupacao() 
  + obterStatusFilaGeral()
  + verificarStatusSetor() 
  + alterarStatusSetor(status: boolean, mensagem: String) 
  + gerenciarPreços(idServico: int, novoPreco: double) 
  + alterarDisponibilidadeServico(idServico: int, disponivel: boolean) 
  + gerenciarHorarios() 
  + cadastrarHorario(dados)
  + atualizarHorario(id, dados)
  + obterQuadroHorariosCompleto()
  + visualizarRelatorios() 
  + gerarRelatorioCompleto()
  + obterEstatisticasGerais()
  + cadastarNotificacao(titulo, mensagem, idUsuario) 
  + gerenciarSolicitacoes() 
}

class "Pedido" as pedido {
  - id_pedido : int 
  --
  - id_usuario : int 
  - data_hora : Datetime
  - status_fila : StatusPedido
  - dados_arquivo : byte[]
  - nome_arquivo_original : String
  - tamanho_arquivo_mb : double
  - total_paginas_arquivo : int
  - valor_total : double
  ==
  + confirmarPedido() 
  + cancelarPedido() 
  + cancelarPedidoAdmin() 
  + atualizarStatusPedido() 
  + obterPosicaoFila() 
  + estimarTempoFila() 
  + listarFilaDePedidos() 
  + obterEstatisticasUsuario()  
  + listarPedidosAtivos() 
  + listarPedidosHistorico() 
  + listarPedidosPorStatus(status) 
}

class "Item_Pedido" as item_pedido {
  - id_item : int 
  --
  - id_pedido : int 
  - id_servico : int 
  - quantidade : int
  - tamanho_papel : String
  - orientacao : Orientacao
  - frente_verso : boolean
  - tipo_cor : TipoCor
  - tipo_servico : CategoriaServico
  ==
}

class "Pagamento" as pagamento {
  - id_pagamento : int 
  --
  - id_pedido : int 
  - metodo : TipoPagamento
  ==
  + registrarPagamento(idPedido, metodo) 
}

class "Servico" as servico {
  - id_servico : int 
  --
  - categoria_servico : CategoriaServico
  - preco_unitario : double
  - disponivel : boolean
  ==
  
}

class "Notificacao" as notificacao {
  - id_notificacao : int 
  --
  - id_usuario : int 
  - titulo : String
  - mensagem : String
  - lida : boolean
  - data_hora : Datetime
  ==
  + listarNotificacoes(idUsuario) 
  + marcarComoLida() 
}


class "Horario_Funcionamento" as horario {
  - id_horario : int 
  --
  - dia_semana : String
  - manha : String
  - tarde : String
  - noite : String
}

class "Configuracao_Sistema" as config {
  - id_config : int 
  --
  - setor_aberto : boolean
  - mensagem_aviso : String
  ==
  + enviarNotificacao(idUsuario, mensagem) : void
  + obterQuadroHorariosCompleto() 
}

usuario <|-- estudante
usuario <|-- admin
usuario ||--o{ notificacao : "recebe"
pedido ||--|{ item_pedido : "contém"
servico ||--o{ item_pedido : "é adicionado em"
pedido ||--o| pagamento : "possui"
config ||--o{ horario : "possui"
estudante "1   " -- "0..*  " pedido : "realiza"
admin "1   " -- "0..*  " config : "gerencia"
admin "1   " -- "0..*  " pedido : "gerencia"

@enduml